PostgreSQLParser.py
# Generated from PostgreSQL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PostgreSQLParser ( Parser ):

    grammarFileName = "PostgreSQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'SELECT'", "'FROM'", "'INSERT'", "'INTO'", 
                     "'('", "')'", "'VALUES'", "'UPDATE'", "'SET'", "'DELETE'", 
                     "'WHERE'", "'GROUP BY'", "'HAVING'", "'ORDER BY'", 
                     "','", "'='", "'JOIN'", "'ON'", "'INNER'", "'LEFT'", 
                     "'RIGHT'", "'FULL'", "'CROSS'", "'COUNT'", "'SUM'", 
                     "'AVG'", "'MIN'", "'MAX'", "';'", "'.'", "'!='", "'<'", 
                     "'<='", "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "STRING", "NUMBER", "WS" ]

    RULE_statement = 0
    RULE_selectStatement = 1
    RULE_insertStatement = 2
    RULE_updateStatement = 3
    RULE_deleteStatement = 4
    RULE_whereClause = 5
    RULE_groupByClause = 6
    RULE_havingClause = 7
    RULE_orderByClause = 8
    RULE_columnList = 9
    RULE_column = 10
    RULE_valueList = 11
    RULE_assignmentList = 12
    RULE_assignment = 13
    RULE_condition = 14
    RULE_expression = 15
    RULE_tableList = 16
    RULE_joinClause = 17
    RULE_joinType = 18
    RULE_aggregateFunction = 19
    RULE_semicolon = 20
    RULE_tableName = 21
    RULE_columnName = 22
    RULE_value = 23
    RULE_comparisonOperator = 24

    ruleNames =  [ "statement", "selectStatement", "insertStatement", "updateStatement", 
                   "deleteStatement", "whereClause", "groupByClause", "havingClause", 
                   "orderByClause", "columnList", "column", "valueList", 
                   "assignmentList", "assignment", "condition", "expression", 
                   "tableList", "joinClause", "joinType", "aggregateFunction", 
                   "semicolon", "tableName", "columnName", "value", "comparisonOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    IDENTIFIER=36
    STRING=37
    NUMBER=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectStatement(self):
            return self.getTypedRuleContext(PostgreSQLParser.SelectStatementContext,0)


        def insertStatement(self):
            return self.getTypedRuleContext(PostgreSQLParser.InsertStatementContext,0)


        def updateStatement(self):
            return self.getTypedRuleContext(PostgreSQLParser.UpdateStatementContext,0)


        def deleteStatement(self):
            return self.getTypedRuleContext(PostgreSQLParser.DeleteStatementContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PostgreSQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statement)
        try:
            self.state = 54
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.selectStatement()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.insertStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.updateStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.deleteStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnList(self):
            return self.getTypedRuleContext(PostgreSQLParser.ColumnListContext,0)


        def tableList(self):
            return self.getTypedRuleContext(PostgreSQLParser.TableListContext,0)


        def semicolon(self):
            return self.getTypedRuleContext(PostgreSQLParser.SemicolonContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(PostgreSQLParser.WhereClauseContext,0)


        def groupByClause(self):
            return self.getTypedRuleContext(PostgreSQLParser.GroupByClauseContext,0)


        def havingClause(self):
            return self.getTypedRuleContext(PostgreSQLParser.HavingClauseContext,0)


        def orderByClause(self):
            return self.getTypedRuleContext(PostgreSQLParser.OrderByClauseContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_selectStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStatement" ):
                listener.enterSelectStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStatement" ):
                listener.exitSelectStatement(self)




    def selectStatement(self):

        localctx = PostgreSQLParser.SelectStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_selectStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(PostgreSQLParser.T__0)
            self.state = 57
            self.columnList()
            self.state = 58
            self.match(PostgreSQLParser.T__1)
            self.state = 59
            self.tableList()
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 60
                self.whereClause()


            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 63
                self.groupByClause()


            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 66
                self.havingClause()


            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 69
                self.orderByClause()


            self.state = 72
            self.semicolon()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableName(self):
            return self.getTypedRuleContext(PostgreSQLParser.TableNameContext,0)


        def columnList(self):
            return self.getTypedRuleContext(PostgreSQLParser.ColumnListContext,0)


        def valueList(self):
            return self.getTypedRuleContext(PostgreSQLParser.ValueListContext,0)


        def semicolon(self):
            return self.getTypedRuleContext(PostgreSQLParser.SemicolonContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_insertStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStatement" ):
                listener.enterInsertStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStatement" ):
                listener.exitInsertStatement(self)




    def insertStatement(self):

        localctx = PostgreSQLParser.InsertStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_insertStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(PostgreSQLParser.T__2)
            self.state = 75
            self.match(PostgreSQLParser.T__3)
            self.state = 76
            self.tableName()
            self.state = 77
            self.match(PostgreSQLParser.T__4)
            self.state = 78
            self.columnList()
            self.state = 79
            self.match(PostgreSQLParser.T__5)
            self.state = 80
            self.match(PostgreSQLParser.T__6)
            self.state = 81
            self.match(PostgreSQLParser.T__4)
            self.state = 82
            self.valueList()
            self.state = 83
            self.match(PostgreSQLParser.T__5)
            self.state = 84
            self.semicolon()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableName(self):
            return self.getTypedRuleContext(PostgreSQLParser.TableNameContext,0)


        def assignmentList(self):
            return self.getTypedRuleContext(PostgreSQLParser.AssignmentListContext,0)


        def semicolon(self):
            return self.getTypedRuleContext(PostgreSQLParser.SemicolonContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(PostgreSQLParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_updateStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateStatement" ):
                listener.enterUpdateStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateStatement" ):
                listener.exitUpdateStatement(self)




    def updateStatement(self):

        localctx = PostgreSQLParser.UpdateStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_updateStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(PostgreSQLParser.T__7)
            self.state = 87
            self.tableName()
            self.state = 88
            self.match(PostgreSQLParser.T__8)
            self.state = 89
            self.assignmentList()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 90
                self.whereClause()


            self.state = 93
            self.semicolon()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableName(self):
            return self.getTypedRuleContext(PostgreSQLParser.TableNameContext,0)


        def semicolon(self):
            return self.getTypedRuleContext(PostgreSQLParser.SemicolonContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(PostgreSQLParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_deleteStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeleteStatement" ):
                listener.enterDeleteStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeleteStatement" ):
                listener.exitDeleteStatement(self)




    def deleteStatement(self):

        localctx = PostgreSQLParser.DeleteStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_deleteStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(PostgreSQLParser.T__9)
            self.state = 96
            self.match(PostgreSQLParser.T__1)
            self.state = 97
            self.tableName()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 98
                self.whereClause()


            self.state = 101
            self.semicolon()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(PostgreSQLParser.ConditionContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_whereClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereClause" ):
                listener.enterWhereClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereClause" ):
                listener.exitWhereClause(self)




    def whereClause(self):

        localctx = PostgreSQLParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_whereClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(PostgreSQLParser.T__10)
            self.state = 104
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupByClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnList(self):
            return self.getTypedRuleContext(PostgreSQLParser.ColumnListContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_groupByClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupByClause" ):
                listener.enterGroupByClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupByClause" ):
                listener.exitGroupByClause(self)




    def groupByClause(self):

        localctx = PostgreSQLParser.GroupByClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_groupByClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(PostgreSQLParser.T__11)
            self.state = 107
            self.columnList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HavingClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(PostgreSQLParser.ConditionContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_havingClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHavingClause" ):
                listener.enterHavingClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHavingClause" ):
                listener.exitHavingClause(self)




    def havingClause(self):

        localctx = PostgreSQLParser.HavingClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_havingClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(PostgreSQLParser.T__12)
            self.state = 110
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderByClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnList(self):
            return self.getTypedRuleContext(PostgreSQLParser.ColumnListContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_orderByClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrderByClause" ):
                listener.enterOrderByClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrderByClause" ):
                listener.exitOrderByClause(self)




    def orderByClause(self):

        localctx = PostgreSQLParser.OrderByClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_orderByClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(PostgreSQLParser.T__13)
            self.state = 113
            self.columnList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PostgreSQLParser.ColumnContext)
            else:
                return self.getTypedRuleContext(PostgreSQLParser.ColumnContext,i)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_columnList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnList" ):
                listener.enterColumnList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnList" ):
                listener.exitColumnList(self)




    def columnList(self):

        localctx = PostgreSQLParser.ColumnListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_columnList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.column()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 116
                self.match(PostgreSQLParser.T__14)
                self.state = 117
                self.column()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnName(self):
            return self.getTypedRuleContext(PostgreSQLParser.ColumnNameContext,0)


        def aggregateFunction(self):
            return self.getTypedRuleContext(PostgreSQLParser.AggregateFunctionContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_column

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn" ):
                listener.enterColumn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn" ):
                listener.exitColumn(self)




    def column(self):

        localctx = PostgreSQLParser.ColumnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_column)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.columnName()
                pass
            elif token in [24, 25, 26, 27, 28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.aggregateFunction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PostgreSQLParser.ValueContext)
            else:
                return self.getTypedRuleContext(PostgreSQLParser.ValueContext,i)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_valueList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueList" ):
                listener.enterValueList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueList" ):
                listener.exitValueList(self)




    def valueList(self):

        localctx = PostgreSQLParser.ValueListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valueList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.value()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 128
                self.match(PostgreSQLParser.T__14)
                self.state = 129
                self.value()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PostgreSQLParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(PostgreSQLParser.AssignmentContext,i)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_assignmentList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentList" ):
                listener.enterAssignmentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentList" ):
                listener.exitAssignmentList(self)




    def assignmentList(self):

        localctx = PostgreSQLParser.AssignmentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignmentList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.assignment()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 136
                self.match(PostgreSQLParser.T__14)
                self.state = 137
                self.assignment()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnName(self):
            return self.getTypedRuleContext(PostgreSQLParser.ColumnNameContext,0)


        def value(self):
            return self.getTypedRuleContext(PostgreSQLParser.ValueContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = PostgreSQLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.columnName()
            self.state = 144
            self.match(PostgreSQLParser.T__15)
            self.state = 145
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PostgreSQLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PostgreSQLParser.ExpressionContext,i)


        def comparisonOperator(self):
            return self.getTypedRuleContext(PostgreSQLParser.ComparisonOperatorContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = PostgreSQLParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.expression()
            self.state = 148
            self.comparisonOperator()
            self.state = 149
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnName(self):
            return self.getTypedRuleContext(PostgreSQLParser.ColumnNameContext,0)


        def value(self):
            return self.getTypedRuleContext(PostgreSQLParser.ValueContext,0)


        def aggregateFunction(self):
            return self.getTypedRuleContext(PostgreSQLParser.AggregateFunctionContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = PostgreSQLParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.columnName()
                pass
            elif token in [37, 38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.value()
                pass
            elif token in [24, 25, 26, 27, 28]:
                self.enterOuterAlt(localctx, 3)
                self.state = 153
                self.aggregateFunction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableName(self):
            return self.getTypedRuleContext(PostgreSQLParser.TableNameContext,0)


        def joinClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PostgreSQLParser.JoinClauseContext)
            else:
                return self.getTypedRuleContext(PostgreSQLParser.JoinClauseContext,i)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_tableList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableList" ):
                listener.enterTableList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableList" ):
                listener.exitTableList(self)




    def tableList(self):

        localctx = PostgreSQLParser.TableListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_tableList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.tableName()
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16252928) != 0):
                self.state = 157
                self.joinClause()
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JoinClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def joinType(self):
            return self.getTypedRuleContext(PostgreSQLParser.JoinTypeContext,0)


        def tableName(self):
            return self.getTypedRuleContext(PostgreSQLParser.TableNameContext,0)


        def condition(self):
            return self.getTypedRuleContext(PostgreSQLParser.ConditionContext,0)


        def getRuleIndex(self):
            return PostgreSQLParser.RULE_joinClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJoinClause" ):
                listener.enterJoinClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJoinClause" ):
                listener.exitJoinClause(self)




    def joinClause(self):
